lib_LTLIBRARIES = librts2xmlrpc.la

librts2xmlrpc_la_SOURCES = \
	urlencoding.cpp \
	XmlRpcClient.cpp \
	XmlRpcDispatch.cpp \
	XmlRpcServerConnection.cpp \
	XmlRpcServer.cpp \
	XmlRpcServerMethod.cpp \
	XmlRpcServerGetRequest.cpp \
	XmlRpcSocket.cpp \
	XmlRpcSource.cpp \
	XmlRpcUtil.cpp \
	XmlRpcValue.cpp

librts2xmlrpc_la_CXXFLAGS = @NOVA_CFLAGS@ -I../../include -I../../include/xmlrpc++
