pkgpython_PYTHON = __init__.py scriptcomm.py flats.py rtsapi.py imgprocess.py \
	centering.py astrometry.py libnova.py dms.py sextractor.py queue.py queues.py \
	iso8601.py target.py radec.py focusing.py altazpath.py sat.py gpoint.py \
	spiral.py bsc.py brights.py progressbar.py fits2model.py kmparse.py tpvp.py \
	scat.py mpcephem.py logger.py

SUBDIRS=db
